# garage-ui

./: .env.sample  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.rs  docker-compose.yml  start.sh
frontend/: .gitignore  ARCHITECTURE-SCSS.md  ARCHITECTURE.md  README.md  angular.json  biome.json  package-lock.json  package.json  proxy.conf.json  tsconfig.client.json  tsconfig.json  tsconfig.server.json  tsconfig.spec.json
frontend/client/: index.html  main.ts  styles.scss
frontend/client/app/: app.config.ts  app.routes.ts  app.ts
frontend/client/styles/: _animations.scss  _buttons.scss  _cards.scss  _effects.scss  _global-classes.scss  _layout.scss  _theme.scss  _utilities.scss  _variables.scss
frontend/server/: app.ts  config.ts  main.ts
frontend/server/controllers/: access-key.controller.ts  bucket.controller.ts  index.ts  object.controller.ts  upload.controller.ts
frontend/server/grpc/: access-key.client.ts  bucket.client.ts  grpc-rpc.adapter.ts  grpc.service.ts  index.ts  object.client.ts  telemetry.ts
frontend/server/middleware/: validator.ts
frontend/server/redis/: redis.ts
frontend/shared/: api-paths.ts  index.ts  route-paths.ts  tsconfig.json
proto/: access_key.proto  block.proto  bucket.proto  cluster.proto  node.proto  object.proto  utility.proto  worker.proto
src/: lib.rs  main.rs
src/application/: mod.rs
src/domain/: errors.rs  mod.rs
src/infrastructure/: config.rs  logging.rs  mod.rs
src/shared/: context.rs  datetime.rs  mod.rs  pagination.rs  trace_id.rs  update_field.rs
(+345 files in other folders)
